src/objects/Case_Swarm_Rule__c.object
<CustomObject>
    <description>Chatterで、ケースを自動フォローさせる公開グループのルールを示す。</description>
    <fields>
        <fullName>Case_Priority__c</fullName>
        <label>ケース優先度</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>ケース状況</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>ケース種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>自動フォロールール</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>公開グループID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>タイプ</label>
        <picklist>
            <picklistValues>
                <fullName>全てのケース</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>自分が所有しているケース</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>指定する状況のケース</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>指定する優先度のケース</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>指定する種別のケース</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ケース自動フォロールール</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSR-{0000}</displayFormat>
        <label>ケース自動フォロールールID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ケース自動フォロールール</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>